argocd/apps/devsoul-portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsoul-portfolio
  namespace: devsoul-portfolio
spec:
  ports:
  - name: devsoul-portfolio
    port: 3000
    targetPort: 3000
  selector:
    app: devsoul-portfolio
  type: ClusterIP
